# plotnado

./: .coveragerc  .dockerignore  .gitignore  .pre-commit-config.yaml  404.html  AGENTS.md  CLAUDE.md  Dockerfile  MANIFEST.in  README.md  _quarto.yml  demo_verify.py  index.html  index.qmd  mkdocs.yaml  objects.inv  plotnado.def  pyproject.toml  requirements-docs.txt  requirements.txt  test_quantnado.py
.github/: AGENTS.md  dependabot.yml
.github/agents/: agent.md
.github/workflows/: build_docs.yml  publish-docker-on-release.yml  publish.yml  run_tests.yml
aesthetics/: index.html
aesthetics_reference/: index.html
api_reference/: index.html
basic_example/: index.html
best_practices/: index.html
changelog/: index.html
cli/: index.html
data_inputs/: index.html
docs/: aesthetics.md  aesthetics.qmd  aesthetics_reference.md  aesthetics_reference.qmd  api_reference.md  api_reference.qmd  basic_example.ipynb  basic_example.qmd  best_practices.md  best_practices.qmd  changelog.md  cli.md  cli.qmd  data_inputs.qmd  example_coverage.md  example_coverage.qmd  faq.md  faq.qmd  figure_workflows.md  figure_workflows.qmd  gen_ref_pages.py  index.md  installation.md  installation.qmd  overlays.ipynb  quickstart.md  quickstart.qmd  quickstart_tracks.md  quickstart_tracks.qmd  recipes.md  recipes.qmd  reference.md  reference.qmd  simple_overlays.ipynb  simple_overlays.qmd  track_aliases.md  track_aliases.qmd  track_catalog.md  track_catalog.qmd  troubleshooting.md  (+3 more)
docs/reference/: SUMMARY.md  SUMMARY.qmd
docs/stylesheets/: plotnado.scss
docs/superpowers/plans/: 2026-03-25-refactor.md
docs/superpowers/specs/: 2026-03-25-refactor-design.md
example_coverage/: index.html
examples/: README.md  advanced_features.py  basic_figure.py  run_examples.py
examples/data/: blueprint_monocyte_lyz_candidate_peaks.bed
examples/figure_examples_from_older_plotnado/: mv411_trancer.ipynb
examples/figure_examples_from_older_plotnado/genome_browser_plots/: 01-mcc-from-enhancers.ipynb  enhancer.viewpoints  peaks.bed  peaks_unique.bed
examples/figure_examples_from_older_plotnado/genome_browser_plots/reference/: 03-mcc-tiled.ipynb
examples/quickstart/: 01_first_plot.py  02_aliases_and_options.py
examples/recipes/: 01_autoscale_overlay_highlight.py  02_theme_labels_toml.py  03_gene_label_strategies.py
examples/tracks/: 01_bigwig_styles.py  02_bed_and_narrowpeak.py  03_links_annotations.py  04_bigwig_collection_and_diff.py  05_matrix_tracks.py  06_quantnado_tracks.py
faq/: index.html
figure_workflows/: index.html
gen_ref_pages/: index.html
installation/: index.html
plotnado/: __init__.py  _kwargs.py  figure.py  figure.pyi  figure_methods.py  hub.py  igv.py  render.py  template.py  theme.py  tracks.py  widgets.py
plotnado/api/: __init__.py  figure.py  genes.py  patches.py  track_wrapper.py  tracks.py  utils.py
plotnado/cli/: __init__.py  cli.py  commands_init.py  commands_plot.py  commands_validate.py  grouping.py  inference.py  init.py  plot.py  render.py  validate.py
plotnado/data/: __init__.py
plotnado/data/gene_bed_files/: genes.json  hg38_genes.bed.gz.tbi
plotnado/data/genes/: hg38.json
plotnado/tracks/: __init__.py  _meta.py  aesthetics.py  annotations.py  axis.py  base.py  bed.py  bigwig.py  bigwig_collection.py  bigwig_diff.py  cooler_track.py  enums.py  genes.py  highlight.py  links.py  overlay.py  peaks.py  quantnado.py  region.py  registry.py  scalebar.py  scaling.py  schemas.py  spacer.py  utils.py
plotnado_old/plotnado/api/: __init__.py  genes.py  track_wrapper.py
plotnado_old/plotnado/data/gene_bed_files/: genes.json
quickstart/: index.html
quickstart_tracks/: index.html
recipes/: index.html
reference/: index.html
reference/SUMMARY/: index.html
reference/plotnado/_kwargs/: index.html
reference/plotnado/_version/: index.html
reference/plotnado/api/figure/: index.html
reference/plotnado/api/genes/: index.html
reference/plotnado/api/patches/: index.html
reference/plotnado/api/track_wrapper/: index.html
reference/plotnado/api/tracks/: index.html
reference/plotnado/api/utils/: index.html
reference/plotnado/cli/cli/: index.html
reference/plotnado/figure/: index.html
reference/plotnado/theme/: index.html
reference/plotnado/tracks/_meta/: index.html
reference/plotnado/tracks/aesthetics/: index.html
reference/plotnado/tracks/annotations/: index.html
reference/plotnado/tracks/axis/: index.html
reference/plotnado/tracks/base/: index.html
reference/plotnado/tracks/bed/: index.html
reference/plotnado/tracks/bigwig/: index.html
reference/plotnado/tracks/bigwig_collection/: index.html
reference/plotnado/tracks/bigwig_diff/: index.html
reference/plotnado/tracks/cooler_track/: index.html
reference/plotnado/tracks/enums/: index.html
reference/plotnado/tracks/genes/: index.html
scripts/: gen_docs_images.py  gen_ref_pages.py  generate_figure_overloads.py  generate_figure_stub.py  generate_kwargs.py  mkdocs_hooks.py
search/: search_index.json
simple_overlays/: index.html
stylesheets/: extra.css
tests/: conftest.py  test_aesthetics.py  test_axis.py  test_bed_track_memory.py  test_bedgraph_dataframe.py  test_bigwig_collection.py  test_bigwig_diff.py  test_bigwig_track.py  test_cli.py  test_cooler_track.py  test_examples.py  test_figure_refactor.py  test_generated_figure_overloads.py  test_generated_figure_stub.py  test_generated_kwargs.py  test_genes.py  test_genomic_region.py  test_grouping.py  test_hub.py  test_igv.py  test_inference.py  test_overlay_track.py  test_quantnado_tracks.py  test_registry.py  test_render.py  test_scale_bar.py  test_scaling.py  test_stub.py  test_template.py  test_theme.py  test_track_labeller.py  test_utils_io.py  test_widgets.py  utils.py
tests/data/: igv_session_CAT_and_MPAL_v2.xml  test_chr21.gtf.gz.tbi  test_chr21_bed12.bed  test_chr21_bed12.bed.gz.tbi
tests/data/capcruncher/: README.md
tests/data/quantnado/: README.md
tools/: fix_conflicts.py
track_aliases/: index.html
track_catalog/: index.html
troubleshooting/: index.html
worked_examples/: index.html
(+45 files in other folders)
