[build-system]
requires = ["setuptools >= 61.0", "wheel", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "plotnado"
authors = [{ name = "Alastair Smith", email = "alastair.smith@ndcls.ox.ac.uk" }]
description = "A simple plotting library for making genomic tracks"
readme = "README.md"
requires-python = ">=3.12"
license = "GPL-3.0-or-later"
dynamic = ["version", "dependencies"]
scripts = { "plotnado" =  "plotnado.cli.cli:main" }
keywords = ["genomics", "bioinformatics", "plotting", "genome-browser", "tracks"]
classifiers = [
	"Development Status :: 3 - Alpha",
	"Intended Audience :: Science/Research",
	"Programming Language :: Python :: 3",
	"Programming Language :: Python :: 3 :: Only",
	"Programming Language :: Python :: 3.12",
	"Topic :: Scientific/Engineering :: Bio-Informatics",
	"Topic :: Scientific/Engineering :: Visualization",
]

[project.optional-dependencies]
cooler = ["cooler", "capcruncher"]
toml = ["tomli; python_version < '3.11'", "tomli-w"]
dev = ["pytest", "pytest-mock", "pytest-assume", "pre-commit"]
docs = [
	"mkdocs>=1.6.1",
	"mkdocstrings>=1.0.3",
	"mkdocs-literate-nav>=0.6.2",
	"mkdocs-gen-files>=0.6.0",
	"mkdocs-jupyter>=0.25.1",
	"mkdocs-click>=0.9.0",
	"pymdown-extensions>=10.21",
	"tomli-w",
	"mkdocstrings[python]>=1.0.3",
]
all = [
	"cooler",
	"capcruncher",
	"tomli; python_version < '3.11'",
	"tomli-w",
	"pytest",
	"pytest-mock",
	"pytest-assume",
	"pre-commit",
	"mkdocs>=1.6.1",
	"mkdocstrings>=1.0.3",
	"mkdocs-literate-nav>=0.6.2",
	"mkdocs-gen-files>=0.6.0",
	"mkdocs-jupyter>=0.25.1",
	"mkdocs-click>=0.9.0",
	"pymdown-extensions>=10.21",
	"mkdocstrings[python]>=1.0.3",
]


[tool.setuptools.dynamic]
dependencies = { file = ["requirements.txt"] }

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
include = ["plotnado*"]

[tool.setuptools.package-data]
plotnado = ["data/gene_bed_files/*", "py.typed"]



[tool.setuptools_scm]
local_scheme = "no-local-version"
write_to = "plotnado/_version.py"

[project.urls]
Homepage = "https://github.com/alsmith151/plotnado"
Repository = "https://github.com/alsmith151/plotnado"
"Bug Tracker" = "https://github.com/alsmith151/plotnado/issues"
Documentation = "https://github.com/alsmith151/plotnado"
