[build-system]
requires = ["setuptools >= 61.0", "wheel", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "plotnado"
authors = [{ name = "Alastair Smith", email = "alastair.smith@ndcls.ox.ac.uk" }]
description = "A simple plotting library for making genomic tracks"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "GPL-3.0-or-later" }
dynamic = ["version", "dependencies"]
keywords = ["genomics", "bioinformatics", "plotting", "genome-browser", "tracks"]
classifiers = [
	"Development Status :: 3 - Alpha",
	"Intended Audience :: Science/Research",
	"Programming Language :: Python :: 3",
	"Programming Language :: Python :: 3 :: Only",
	"Programming Language :: Python :: 3.12",
	"Topic :: Scientific/Engineering :: Bio-Informatics",
	"Topic :: Scientific/Engineering :: Visualization",
]
scripts = { "plotnado" =  "plotnado.cli.cli:main" }

[tool.setuptools.dynamic]
dependencies = { file = ["requirements.txt"] }

[project.optional-dependencies]
cooler = ["cooler", "capcruncher"]
quantnado = ["quantnado"]
toml = ["tomli; python_version < '3.11'", "tomli-w"]
notebook = ["ipywidgets>=8"]
dev = ["pytest", "pytest-cov", "pytest-mock", "pytest-assume", "pre-commit", "ipywidgets>=8"]
docs = [
	"jupyter>=1.1.1",
	"ipykernel>=6.29.0",
	"tomli-w",
	"cooler",
	"capcruncher",
	"quantnado",
]
all = [
	"cooler",
	"capcruncher",
	"quantnado",
	"tomli; python_version < '3.11'",
	"tomli-w",
	"ipywidgets>=8",
	"pytest",
	"pytest-cov",
	"pytest-mock",
	"pytest-assume",
	"pre-commit",
	"jupyter>=1.1.1",
	"ipykernel>=6.29.0",
]




[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
include = ["plotnado*"]

[tool.setuptools.package-data]
plotnado = ["data/gene_bed_files/*", "py.typed"]



[tool.setuptools_scm]
local_scheme = "no-local-version"
write_to = "plotnado/_version.py"

[project.urls]
Homepage = "https://github.com/alsmith151/plotnado"
Repository = "https://github.com/alsmith151/plotnado"
"Bug Tracker" = "https://github.com/alsmith151/plotnado/issues"
Documentation = "https://github.com/alsmith151/plotnado"
